alteraçao da tela usuario

--- a/teste/templates/listaralunos.html
+++ b/teste/templates/listaralunos.html
@@ -19,7 +19,7 @@
             <td>{{a.email}}</td>
              <td>
                  <a href="{% url 'editar_aluno' a.id %}">Editar</a>
-                 <a href="#">Excluir</a>
+                 <a href="{% url 'excluir_aluno' a.id %}">Excluir</a>
              </td>
        </tr>
        {% endfor %}
