alteraçao da tela usuario

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,51 @@
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sistema </title>
+    {% bootstrap_css %}
 </head>
 
 
 <body>
+    <div class="container">
+
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        Sistema Online</a>
+                    <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#menu"
+                        aria-controls="menu" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span>Menu</span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="menu">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="list-item">
+                                <a href="{% url 'listar_Alunos' %}"
+                                    class="nav-link">Alunos</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#" class="nav-link">curso</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#" class="nav-link">Turmas</a>
+                            </li>
+     
+                        </ul>
+                    </div>  
+                </div>
+            </nav>
+     
+
     <a href="{% url 'listar_Alunos' %}">aluno</a>    
     <a href="{% url 'listar_cursos' %}">curso</a>
     {% block content %}
     {% endblock %}
+</div>
 </body>
+{% bootstrap_javascript %}
 </html>
