--- a/teste/templates/incluir_alunos.html
+++ b/teste/templates/incluir_alunos.html
@@ -5,6 +5,7 @@
     <form method="post">
         {{ form }}
         {% csrf_token %}
-        <input type="submit" value="Gravar" /> 
+        <input type="submit" value="Gravar" 
+        class="button"/> 
     </form>
 {% endblock %}
