--- a/teste/templates/listaralunos.html
+++ b/teste/templates/listaralunos.html
@@ -2,15 +2,17 @@
 {% block content %}
 
 <h2>listar alunos</h2>
-<a href="{% url 'incluir_aluno' %}">cadrastrar novo aluno</a>
-<table>
+<a href="{% url 'incluir_aluno' %}"class="">
+    cadrastrar novo aluno</a>
+<table class="table table-striped">
+
     <tr>
         <th>id</th>
         <th>nome</th>
         <th>e_email</th>
         <th>açõoes</th>
     </tr>
-</table>
+
 <tbody>
     {% for a in alunos %}
        <tr> 
@@ -24,5 +26,7 @@
        </tr>
        {% endfor %}
 </tbody>
+</table>
+
 
 {% endblock %}
