--- a/teste/templates/listaralunos.html
+++ b/teste/templates/listaralunos.html
@@ -20,8 +20,13 @@
             <td>{{a.nome}}</td>
             <td>{{a.email}}</td>
              <td>
-                 <a href="{% url 'editar_aluno' a.id %}">Editar</a>
-                 <a href="{% url 'excluir_aluno' a.id %}">Excluir</a>
+                 <a href="{% url 'editar_aluno' a.id %}"
+                 class="btn btn-secondary">Editar</a>
+                 <a href="javascript:void(0)"
+                 onclick="abrirTela( '{% url 'excluir_aluno' a.id %}' )"
+                 class="btn btn-danger" >
+                 Excluir
+                </a>
              </td>
        </tr>
        {% endfor %}
